# cemclrn-mp-train

./: .gitignore  README.md  main.py  pyproject.toml
modules/datasets/helpers/: cedar_df.py  constants.py
modules/datasets/torch/: CEDARDataset.py
modules/models/: SigNetCNN.py  SigNetSiamese.py
modules/test/: SigNet_test.py
modules/train/: SigNet.py
src/datasets/: CEDARDataset.py  UserDataset.py
src/datasets/process/: cedar_df.py
src/engines/: SigNet.py  inference.py
src/models/: SigNetCNN.py
src/scripts/: ckpt_to_pth.py
src/scripts/test/: SigNet_test.py  SigNet_test_user.py  SigNet_test_user_single.py
src/scripts/train/: SigNet_finetuning.py  SigNet_train.py
src/utils/: populate_db.py
src/utils/transforms/: CropToBoundingBox.py  GPUGaussianBlur.py  OtsuRemoveNoise.py  transforms.py
